# HtautauRegression

./: README.md  pyproject.toml  requirements.txt  setup.sh
examples/: LoadATLASData.ipynb  LoadDelphesData.ipynb
src/HtautauRegression/: dataset.py  helpers.py
